--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,4 +4,4 @@ project:
 website:
   title: "Slides: Software development - good practices, tips & tools"
   site-url: https://patricia-ternes.github.io/slides_SD_tips_tools
-  description: "Slides for the "Software development - good practices, tips & tools" Training."
+  description: "Slides for the Software development - good practices, tips & tools Training."
